@@ -1,6 +1,15 @@
 # ChangeLog for virtual/shadow
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/shadow/ChangeLog,v 1.8 2012/08/05 12:08:34 grobian Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/shadow/ChangeLog,v 1.11 2014/01/18 04:48:12 vapier Exp $
+
+  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> shadow-0.ebuild:
+  Add arm64 love.
+
+  08 Nov 2013; Michael Haubenwallner <haubi@gentoo.org> shadow-0.ebuild:
+  keyword ~ppc-aix
+
+  17 Feb 2013; Zac Medico <zmedico@gentoo.org> shadow-0.ebuild:
+  Add ~arm-linux keyword.
 
   05 Aug 2012; Fabian Groffen <grobian@gentoo.org> shadow-0.ebuild:
   Marked ~x86-freebsd
